--- a/11-组件化高级/01-slot-插槽的基本使用.html
+++ b/11-组件化高级/01-slot-插槽的基本使用.html
@@ -18,7 +18,7 @@
 
 <template id="cpn">
   <div>
-    我是组件
+    我是组件sa
 <!--    插槽可以给默认值，父组件有指定显示指定的，没指定使用默认-->
     <slot><button>按钮</button></slot>
   </div>
