--- a/05-事件监听/01-v-on的基本使用.html
+++ b/05-事件监听/01-v-on的基本使用.html
@@ -17,8 +17,8 @@
   <button v-on:click="decrement">-</button>
 
   //语法糖
-  <button @:click="increment">+</button>
-  <button @:click="decrement">-</button>
+  <button @click="increment">+</button>
+  <button @click="decrement">-</button>
   <script src="../js/vue.js"></script>
   <script>
     const app = new Vue({
