--- a/10-组件化/00-注册组件的步骤.html
+++ b/10-组件化/00-注册组件的步骤.html
@@ -10,11 +10,12 @@
   //1.创建组件构造器
   //Vue.extend()
   const myCompoonent = Vue.extend({
-    template:
+    template: `
         <div>
           <h2>组件标题</h2>
           <p>我是组件中的一个段落内容</p>
         </div>
+        `
   });
   //2.注册组件
   // Vue.component()
