--- a/06-条件判断/04-用户切换登录案例.html
+++ b/06-条件判断/04-用户切换登录案例.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="app">
-  //for可以使点击label后获取input的焦点
+<!--  for可以使点击label后获取input的焦点-->
   <span v-if="isUser">
     <label for="userName">用户账号</label>
     <input type="text" id="userName" placeholder="用户账号">
