--- a/10-组件化/09-通信组件-父传子（props中的驼峰标识）.html
+++ b/10-组件化/09-通信组件-父传子（props中的驼峰标识）.html
@@ -24,9 +24,13 @@
         type: Object,
         default() {
           return {
-
           };
         }
+      }
+    },
+    data() {
+      return {
+        test: this.cInfo
       }
     }
   }
