--- a/07-循环遍历/03-数组的响应式方法.html
+++ b/07-循环遍历/03-数组的响应式方法.html
@@ -16,6 +16,7 @@
   //sort()方法，排序方法
   //reverse()方法，反转函数
   //Vue.set(要修改的对象， 索引值， 修改后的值)
+  //Vue.delete(target, key)删除对象属性，target可以是对象也可以是数组，对象时对应的key为string，为数组时key为number
 </script>
 </body>
 </html>
