--- a/15-promise/01-Promise的基本使用.html
+++ b/15-promise/01-Promise的基本使用.html
@@ -67,7 +67,7 @@
   //Promise中有三种状态：
   //1.当Promise中发起异步操作后就进入了pedding状态
   //2.当异步操作成功后就进入满足状态（fulfill），当我们主动回调了resolve时就处于该状态，并且会回调.then()
-  //3.当我们主动回调了reject时，就处于决绝状态（reject），并且会回调.catch()
+  //3.当我们主动回调了reject时，就处于拒绝状态（reject），并且会回调.catch()
 </script>
 </body>
 </html>
